removed submit button and fix z-index

--- a/app/render/src/stylesheets/style.css
+++ b/app/render/src/stylesheets/style.css
@@ -61,7 +61,9 @@ button:hover{
 }
 
 nav {
+	z-index: 5;
 	width: 100%;
+	height: 5em;
 	background:black;
 	color: white;
 	font-family: 'Roboto', sans-serif;
@@ -69,6 +71,7 @@ nav {
 	top: 0;
 	left: 0;
 	margin: 0;
+	position: absolute;
 }
 
 nav ul {
@@ -251,4 +254,14 @@ nav ul li a:active{
   
 .react-flow-fix {
 	position: unset !important;
+}
+
+.react-flow__renderer {
+	top: 5em !important;
+}
+
+.controls {
+	z-index: 5;
+	top: 5em !important;
+	position: absolute;
 }
